--- a/env.cfg
+++ b/env.cfg
@@ -21,6 +21,7 @@ if [[ ${CENTOS_RELEASE} == 7 ]]; then
 		module load ucsc/202003
         module load bwa/0.7.15
 		module load git/2.18.0
+		module load rmblast/2.10.0+
 		module load RepeatMasker/4.1.0 
 else
         # centos 6 only modules
