--- a/env.cfg
+++ b/env.cfg
@@ -39,6 +39,6 @@ module load minimap2/2.17
 module load pbconda/201911
 module load bedtools/2.27.1
 module load seqtk/1.3
-
+module load trf/4.09
 
 
