--- a/env.cfg
+++ b/env.cfg
@@ -16,21 +16,15 @@ if test ! -z $MODULESHOME; then
 fi
 
 
-if [[ ${CENTOS_RELEASE} == 7 ]]; then
-        # centos 7 only modules
-		module load ucsc/202003
-        module load bwa/0.7.15
-		module load git/2.18.0
-		module load rmblast/2.10.0+
-		module load RepeatMasker/4.1.0 
-else
-        # centos 6 only modules
-        module load ucsc/20160823
-        module load bwakit/0.7.15
-		module load git/2.19.1
-		module load perl/5.14.2
-		module load RepeatMasker/3.3.0 
-fi
+# centos 7 only modules
+module load boost/1.68.0
+PATH=/net/eichler/vol26/projects/chm13_t2t/nobackups/software/sedef:$PATH
+module load ucsc/202003
+module load bwa/0.7.15
+module load git/2.18.0
+module load rmblast/2.10.0+
+module load RepeatMasker/4.1.0 
+module load gffread/0.12.1
 
 module load gcc/8.1.0
 module load samtools/1.10  htslib/1.9
